Fixed spacing of gallery and bio

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
-    width: 1100px;
+    width: 700px;
     height: auto;
     overflow: hidden;
 }
@@ -133,6 +133,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
+    margin-bottom: 80px;
     text-align: center;
     padding: 20px;
 }
